--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,6 +66,11 @@ jobs:
         path: ./dist
         retention-days: 1
         
-    - name: Deploy to GitHub Pages
+    - name: Deploy to GitHub Pages (peaceiris)
       id: deployment
-      uses: actions/deploy-pages@v4
+      uses: peaceiris/actions-gh-pages@v4
+      with:
+        personal_token: ${{ secrets.GH_PAGES_TOKEN }}
+        publish_dir: ./dist
+        user_name: github-actions[bot]
+        user_email: 41898282+github-actions[bot]@users.noreply.github.com
